Add comandos_controller com os passos para realizar a criação do planalto e das sondas com seus movimentos.
