# server/models/__init__.py
@@ -1,6 +1,5 @@
 # coding: utf-8
 
 from __future__ import absolute_import
-# import models into model package
-# from server.models.planalto import Planalto
-# from server.models.sonda import Sonda
+from server.models.planalto import Planalto
+from server.models.sonda import Sonda
