# server/services/utils.py
@@ -6,7 +6,28 @@ movimentos = {
 }
 
 
-def movimento_valido(self):
-    """Verifica se o movimento é válido
+def proximo_movimento(x_atual, y_atual, direcao_atual, movimento):
     """
-    pass
+        Verifica qual o próximo movimento
+    """
+
+    if movimento == "M":
+        x_atual = x_atual + movimentos[direcao_atual][movimento]['x']
+        y_atual = y_atual + movimentos[direcao_atual][movimento]['y']
+    else:
+        direcao_atual = movimentos[direcao_atual][movimento]
+
+    return x_atual, y_atual, direcao_atual
+
+
+def validar_movimento(x_atual, y_atual, x_maximo, y_maximo):
+    """
+        Verifica se o movimento a ser realizado é válido
+    """
+    if x_atual < 0 or x_atual > x_maximo:
+        return False, "A movimentação no eixo X é inválida. Esse movimento foi ignorado."
+    if y_atual < 0 or y_atual > y_maximo:
+        return False, "A movimentação no eixo Y é inválida. Esse movimento foi ignorado."
+
+    return True, None
+
